--- a/Content.Client/UserInterface/Systems/MenuBar/Widgets/GameTopMenuBar.xaml
+++ b/Content.Client/UserInterface/Systems/MenuBar/Widgets/GameTopMenuBar.xaml
@@ -78,11 +78,11 @@
         Access="Internal"
         Icon="{xe:Tex '/Textures/_EinsteinEngines/Interface/language.png'}"
         BoundKey = "{x:Static is:ContentKeyFunctions.OpenLanguageMenu}"
-        ToolTip="Open the Language Menu"
+        ToolTip="{Loc 'game-hud-open-language-menu-button-tooltip'}"
         MinSize="42 64"
         HorizontalExpand="True"
         AppendStyleClass="{x:Static style:StyleBase.ButtonSquare}"
-        />
+        /> <!-- RU-Localization -->
     <ui:MenuButton
         Name="AdminButton"
         Access="Internal"
