--- a/Content.Client/Shuttles/UI/DockingScreen.xaml
+++ b/Content.Client/Shuttles/UI/DockingScreen.xaml
@@ -28,29 +28,29 @@
                            Orientation="Vertical">
         <!-- FTL Lock Section -->
         <controls1:StripeBack MinSize="48 48">
-            <controls:Label Text="{controls:Loc 'FTL Lock'}" HorizontalAlignment="Center"/>
-        </controls1:StripeBack>
+            <controls:Label Text="{controls:Loc 'shuttle-console-ftl-lock'}" HorizontalAlignment="Center"/>
+        </controls1:StripeBack> <!-- Ru-Localization -->
         <controls:PanelContainer VerticalExpand="True" HorizontalExpand="True" Margin="4 4 4 4">
             <controls:PanelContainer.PanelOverride>
                 <graphics:StyleBoxFlat BorderThickness="2" BorderColor="#333333" BackgroundColor="#121212"/>
             </controls:PanelContainer.PanelOverride>
         <controls:BoxContainer Orientation="Horizontal" HorizontalAlignment="Stretch" Margin="5 5 5 5">
             <controls:Button Name="FTLLockEnabledButton"
-                             Text="{controls:Loc 'Enabled'}"
+                             Text="{controls:Loc 'shuttle-console-ftl-lock-enabled'}"
                              ToggleMode="True"
                              HorizontalExpand="True"
-                             StyleClasses="OpenRight"/>
+                             StyleClasses="OpenRight"/> <!-- Ru-Localization -->
             <controls:Button Name="FTLLockDisabledButton"
-                             Text="{controls:Loc 'Disabled'}"
+                             Text="{controls:Loc 'shuttle-console-ftl-lock-disabled'}"
                              ToggleMode="True"
                              HorizontalExpand="True"
-                             StyleClasses="OpenLeft"/>
+                             StyleClasses="OpenLeft"/> <!-- Ru-Localization -->
         </controls:BoxContainer>
         </controls:PanelContainer>
 
         <!-- Docks Section -->
         <controls1:StripeBack MinSize="48 48">
-            <controls:Label Text="{controls:Loc 'Docks'}" HorizontalAlignment="Center"/>
+            <controls:Label Text="{controls:Loc 'shuttle-console-docks-label'}" HorizontalAlignment="Center"/> <!-- Ru-Localization -->
         </controls1:StripeBack>
         <controls:PanelContainer VerticalExpand="True" HorizontalExpand="True" Margin="4 4 4 4">
             <controls:PanelContainer.PanelOverride>
@@ -62,9 +62,9 @@
                         <graphics:StyleBoxFlat BorderThickness="2" BorderColor="#333333" BackgroundColor="#121212"/>
                     </controls:PanelContainer.PanelOverride>
         <controls:Button Name="UndockAllButton"
-                         Text="{controls:Loc 'Undock All'}"
+                         Text="{controls:Loc 'shuttle-console-undock-all'}"
                          Margin="5 5 5 5"
-                         StyleClasses="ButtonSquare"/>
+                         StyleClasses="ButtonSquare"/> <!-- Ru-Localization -->
                 </controls:PanelContainer>
                 <controls:PanelContainer VerticalExpand="True" HorizontalExpand="True" Margin="4 4 4 4">
                     <controls:PanelContainer.PanelOverride>
